test/libhyperion/syntaxTests/receiveEther/view_modifier.hyp
contract C {
    uint x;
    receive() external view { x = 2; }
}
// ----
// DeclarationError 7793: (29-63): Receive znd function must be payable, but is "view".
